Tue Feb 10 16:44:33 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* CIDLC/CIDLC.vcproj:

	  Changed the include path.

Tue Feb 10 16:28:53 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * cidlc/CIDLC.vcproj:

          Added '..' to include paths, to pick up inclusion of
          ciao/Version.h.

        * cidlc/ServantHeaderGenerator.cpp:
        * cidlc/ServantSourceGenerator.cpp:

          Fixed errors in generated environment variables. Thanks to
          Edward Mulholland <emulholl@atl.lmco.com> for reporting the
          problems.

Tue Feb 10 14:54:48 2004  Venkita Subramonian  <venkita@cs.wustl.edu>

	* ciao/Container_Impl.h:
	* ciao/Container_Base.h: Changes to fix compile errors by adding
	  default arguments for static configuration related paramters in
	  the constructor.


Tue Feb 10 11:35:47 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/Deployment.idl:

	  Added this file for the new DnC spec.

Tue Feb 10 10:41:48 2004  Venkita Subramonian  <venkita@cs.wustl.edu>

	* tools/static_configurator/Static_Assembly_Visitors.{cpp,h}:
	* tools/static_configurator/Static_Assembly_Parser.cpp:
	* tools/static_configurator/Static_Assembly.h: Offline static
	  configuration parser to parse XML files into an intermediate C++
	  header file which will be included by the online configuration
	  engine.

	* tools/static_configurator/Static_Configurator.mpc:
	* tools/static_configurator/Static_Configurator.{h,cpp}: Online
	  configuration engine that reads the intermediate table created
	  by the offline parser. This is responsible for creating
	  component servers, homes, containers, components and
	  establishing connections between components.

	* ciao/Container_Base.{h,cpp}: Modifications for static
	  configuration. While installing a home, instead of loading the
	  entry point symbol from a DLL, the entry point function pointer
	  is obtained from a hashmap which is passed to the
	  container. This hashmap contains the name of the entry point and